fixed dark mode styling issue

--- a/src/components/Overview/OverviewCompStyles/Overview.css
+++ b/src/components/Overview/OverviewCompStyles/Overview.css
@@ -10,7 +10,7 @@
   border-radius: var(--radius-outer);
 }
 .product-container.dark{
-  background-color: var(--dark-secondary);
+  background: var(--dark-secondary);
 }
 
 .description-container{
@@ -25,7 +25,7 @@
   background:var(--light-bg-gradient);
 }
 .description-container.dark {
-  background-color: var(--dark-secondary);
+  background: var(--dark-secondary);
 }
 .description{
   line-height: 2.5rem;
